create page to shop phone

--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
 <html>
 	<head>
-		<title>Hello</title>
+		<title>NDT Shop</title>
 		<meta charset="utf-8">
 	</head>
 	<body>
-		<h1>Welcome to my page!</h1>
-		<p>This is my page on github</p>
+		<h1>Welcome to my shop!</h1>
+		<p>You can find your phone at here!</p>
+		<img src="/img/Apple-iPhone-5s.jpg"/>
+		<p>iPhone 5s</p>
+		<img src="/img/iphone-6s.jpg"/>
+		<p>iPhone 6s</p>
+		<img src="/img/galaxy-not6.jpg"/>
+		<p>Galaxy 6s</p>
 	</body>
 </html>
