--- a/index.html
+++ b/index.html
@@ -2,15 +2,137 @@
 	<head>
 		<title>NDT Shop</title>
 		<meta charset="utf-8">
+		<link rel="stylesheet" type="text/css" href="css/style.css">
 	</head>
 	<body>
-		<h1>Welcome to my shop!</h1>
-		<p>You can find your phone at here!</p>
-		<img src="/img/Apple-iPhone-5s.jpg"/>
-		<p>iPhone 5s</p>
-		<img src="/img/iphone-6s.jpg"/>
-		<p>iPhone 6s</p>
-		<img src="/img/galaxy-not6.jpg"/>
-		<p>Galaxy 6s</p>
+		<div class="title">
+			<h1>Welcome to NDT Shop!</h1>
+			<p>You can find your phone at here!</p>
+		</div>
+		<div class="item">
+			<div class="product_image">
+				<a href="http://google.com" title="iPhone 5s">
+					<img src="img/Apple-iPhone-5s.jpg" alt="iPhone 5s" />
+				</a>
+			</div>
+			<div class="product_title">
+				<a href="http://google.com" title="iPhone 5s">
+					<h2>iPhone 5s</h2>
+				</a>
+			</div>
+		</div>
+		<div class="item">
+			<div class="product_image">
+				<a href="http://google.com" title="iPhone 6s">
+					<img src="img/iphone-6s.jpg" alt="iPhone 6s" />
+				</a>
+			</div>
+			<div class="product_title">
+				<a href="http://google.com" title="iPhone 6s">
+					<h2>iPhone 6s</h2>
+				</a>
+			</div>
+		</div>
+		<div class="item">
+			<div class="product_image">
+				<a href="http://google.com" title="Galaxy Note 6">
+					<img src="img/galaxy-not6.jpg" alt="Galaxy Note 6" />
+				</a>
+			</div>
+			<div class="product_title">
+				<a href="http://google.com" title="Galaxy Note 6">
+					<h2>Galaxy Note 6</h2>
+				</a>
+			</div>
+		</div>
+		<div class="item">
+			<div class="product_image">
+				<a href="http://google.com" title="Phone S30">
+					<img src="img/phone-s30.png" alt="Phone S30" />
+				</a>
+			</div>
+			<div class="product_title">
+				<a href="http://google.com" title="Phone S30">
+					<h2>Phone S30</h2>
+				</a>
+			</div>
+		</div>
+		<div class="item">
+			<div class="product_image">
+				<a href="http://google.com" title="Galaxy Note Edge">
+					<img src="img/Samsung-Galaxy-Note-Edge.jpg" alt="Galaxy Note Edge" />
+				</a>
+			</div>
+			<div class="product_title">
+				<a href="http://google.com" title="Galaxy Note Edge">
+					<h2>Galaxy Note Edge</h2>
+				</a>
+			</div>
+		</div>
+
+		<div class="item">
+			<div class="product_image">
+				<a href="http://google.com" title="BlackBerry Priv">
+					<img src="img/priv_crop.0.0.0.0.jpg" alt="BlackBerry Priv" />
+				</a>
+			</div>
+			<div class="product_title">
+				<a href="http://google.com" title="BlackBerry Priv">
+					<h2>BlackBerry Priv</h2>
+				</a>
+			</div>
+		</div>
+
+		<div class="item">
+			<div class="product_image">
+				<a href="http://google.com" title="Nokia Lumia">
+					<img src="img/Nokia-Lumia-Icon.jpg" alt="Nokia Lumia" />
+				</a>
+			</div>
+			<div class="product_title">
+				<a href="http://google.com" title="Nokia Lumia">
+					<h2>Nokia Lumia</h2>
+				</a>
+			</div>
+		</div>
+
+		<div class="item">
+			<div class="product_image">
+				<a href="http://google.com" title="iPhond 6s plus">
+					<img src="img/iphone-6s-plus-64gb-vang-dong-org-1.png" alt="iPhond 6s plus" />
+				</a>
+			</div>
+			<div class="product_title">
+				<a href="http://google.com" title="iPhond 6s plus">
+					<h2>iPhond 6s plus</h2>
+				</a>
+			</div>
+		</div>
+
+		<div class="item">
+			<div class="product_image">
+				<a href="http://google.com" title="HTC Desire 816">
+					<img src="img/htc-desire-816-en-slide-02-zoom.jpg" alt="HTC Desire 816" />
+				</a>
+			</div>
+			<div class="product_title">
+				<a href="http://google.com" title="HTC Desire 816">
+					<h2>HTC Desire 816</h2>
+				</a>
+			</div>
+		</div>
+
+		<div class="item">
+			<div class="product_image">
+				<a href="http://google.com" title="Acer phones">
+					<img src="img/acer-windows-10-phones-front.jpg" alt="Acer phones" />
+				</a>
+			</div>
+			<div class="product_title">
+				<a href="http://google.com" title="Acer phones">
+					<h2>Acer phones</h2>
+				</a>
+			</div>
+		</div>
 	</body>
 </html>
