--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		</div>
 		<div class="item">
 			<div class="product_image">
-				<a href="http://google.com" title="iPhone 5s">
+				<a href="items/iphone-5s.html" title="iPhone 5s">
 					<img src="img/Apple-iPhone-5s.jpg" alt="iPhone 5s" />
 				</a>
 			</div>
@@ -35,13 +35,13 @@
 		</div>
 		<div class="item">
 			<div class="product_image">
-				<a href="http://google.com" title="Galaxy Note 6">
-					<img src="img/galaxy-not6.jpg" alt="Galaxy Note 6" />
+				<a href="http://google.com" title="Galaxy Note 5">
+					<img src="img/Samsung-Galaxy-Note-5-0.jpg" alt="Galaxy Note 5" />
 				</a>
 			</div>
 			<div class="product_title">
-				<a href="http://google.com" title="Galaxy Note 6">
-					<h2>Galaxy Note 6</h2>
+				<a href="http://google.com" title="Galaxy Note 5">
+					<h2>Galaxy Note 5</h2>
 				</a>
 			</div>
 		</div>
