--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 		<div class="item">
 			<div class="product_image">
 				<a href="http://google.com" title="BlackBerry Priv">
-					<img src="img/priv_crop.0.0.0.0.jpg" alt="BlackBerry Priv" />
+					<img src="img/DTEK-Security-BlackBerry-Priv.png" alt="BlackBerry Priv" />
 				</a>
 			</div>
 			<div class="product_title">
@@ -124,13 +124,13 @@
 
 		<div class="item">
 			<div class="product_image">
-				<a href="http://google.com" title="Acer phones">
-					<img src="img/acer-windows-10-phones-front.jpg" alt="Acer phones" />
+				<a href="http://google.com" title="Acer Liquid Z200">
+					<img src="img/Acer-Liquid-Z200.jpg" alt="Acer Liquid Z200" />
 				</a>
 			</div>
 			<div class="product_title">
-				<a href="http://google.com" title="Acer phones">
-					<h2>Acer phones</h2>
+				<a href="http://google.com" title="Acer Liquid Z200">
+					<h2>Acer Liquid Z200</h2>
 				</a>
 			</div>
 		</div>
