--- a/items/iphone-5s.html
+++ b/items/iphone-5s.html
@@ -2,9 +2,18 @@
 	<head>
 		<title>NDT Shop</title>
 		<meta charset="utf-8">
-		<link rel="stylesheet" type="text/css" href="css/style.css">
+		<link rel="stylesheet" type="text/css" href="../css/style-item.css">
 	</head>
 	<body>
-	<h2>iPhone 5s</h2>
+	<div class="item-title">
+		<a href="../index.html" title="Home">
+			<h2>iPhone 5s</h2>
+		</a>
+	</div>
+	<div class="item-image">
+		<a href="../index.html" title="Home">
+			<img src="../img/Apple-iPhone-5s.jpg" alt="iPhone 5s" />
+		</a>
+	</div>
 	</body>
 </html>
