add iphone 5s and iphone 6s

--- a/index.html
+++ b/index.html
@@ -16,19 +16,19 @@
 				</a>
 			</div>
 			<div class="product_title">
-				<a href="http://google.com" title="iPhone 5s">
+				<a href="items/iphone-5s.html" title="iPhone 5s">
 					<h2>iPhone 5s</h2>
 				</a>
 			</div>
 		</div>
 		<div class="item">
 			<div class="product_image">
-				<a href="http://google.com" title="iPhone 6s">
+				<a href="items/iphone-6s.html" title="iPhone 6s">
 					<img src="img/iphone-6s.jpg" alt="iPhone 6s" />
 				</a>
 			</div>
 			<div class="product_title">
-				<a href="http://google.com" title="iPhone 6s">
+				<a href="items/iphone-6s.html" title="iPhone 6s">
 					<h2>iPhone 6s</h2>
 				</a>
 			</div>
