--- a/items/iphone-6s.html
+++ b/items/iphone-6s.html
@@ -2,8 +2,24 @@
 	<head>
 		<title>NDT Shop</title>
 		<meta charset="utf-8">
-		<link rel="stylesheet" type="text/css" href="css/style.css">
+		<link rel="stylesheet" type="text/css" href="../css/style-item.css">
 	</head>
 	<body>
+	<div class="item-image">
+		<a href="../index.html" title="Home">
+			<img src="../img/iphone-6s.jpg" alt="iPhone 6s" />
+		</a>
+	</div>
+	<div class="item-detail">
+		<a href="../index.html" title="Home">
+			<h2>iPhone 6s</h2>
+		</a>
+		<p>Màn hình: 4.7"</p>
+		<p>Camera: 12 MP</p>
+		<p>CPU: A9</p>
+		<p>RAM: 2 GB</p>
+		<p>Bộ nhớ trong: 64 GB</p>
+		<p>Pin: 1715 mAh</p>
+	</div>
 	</body>
 </html>
