--- a/items/iphone-5s.html
+++ b/items/iphone-5s.html
@@ -5,15 +5,21 @@
 		<link rel="stylesheet" type="text/css" href="../css/style-item.css">
 	</head>
 	<body>
-	<div class="item-title">
-		<a href="../index.html" title="Home">
-			<h2>iPhone 5s</h2>
-		</a>
-	</div>
 	<div class="item-image">
 		<a href="../index.html" title="Home">
 			<img src="../img/Apple-iPhone-5s.jpg" alt="iPhone 5s" />
 		</a>
+	</div>
+	<div class="item-detail">
+		<a href="../index.html" title="Home">
+			<h2>iPhone 5s</h2>
+		</a>
+		<p>Màn hình: 4"</p>
+		<p>Camera: 8 MP</p>
+		<p>CPU: A7</p>
+		<p>RAM: 1 GB</p>
+		<p>Bộ nhớ trong: 16 GB</p>
+		<p>Pin: 1560 mAh</p>
 	</div>
 	</body>
 </html>
