change path to root

--- a/items/acer-liquid-z200.html
+++ b/items/acer-liquid-z200.html
@@ -2,16 +2,16 @@
 	<head>
 		<title>NDT Shop</title>
 		<meta charset="utf-8">
-		<link rel="stylesheet" type="text/css" href="../css/style-item.css">
+		<link rel="stylesheet" type="text/css" href="/css/style-item.css">
 	</head>
 	<body>
 	<div class="item-image">
-		<a href="../index.html" title="Home">
-			<img src="../img/Acer-Liquid-Z200.jpg" alt="Acer Liquid Z200" />
+		<a href="/index.html" title="Home">
+			<img src="/img/Acer-Liquid-Z200.jpg" alt="Acer Liquid Z200" />
 		</a>
 	</div>
 	<div class="item-detail">
-		<a href="../index.html" title="Home">
+		<a href="/index.html" title="Home">
 			<h2>Acer Liquid Z200</h2>
 		</a>
 		<p>Màn hình: 4"</p>
