--- a/items/galaxy-note5.html
+++ b/items/galaxy-note5.html
@@ -2,16 +2,16 @@
 	<head>
 		<title>NDT Shop</title>
 		<meta charset="utf-8">
-		<link rel="stylesheet" type="text/css" href="../css/style-item.css">
+		<link rel="stylesheet" type="text/css" href="/css/style-item.css">
 	</head>
 	<body>
 	<div class="item-image">
-		<a href="../index.html" title="Home">
-			<img src="../img/Samsung-Galaxy-Note-5-0.jpg" alt="Galaxy Note 5" />
+		<a href="/index.html" title="Home">
+			<img src="/img/Samsung-Galaxy-Note-5-0.jpg" alt="Galaxy Note 5" />
 		</a>
 	</div>
 	<div class="item-detail">
-		<a href="../index.html" title="Home">
+		<a href="/index.html" title="Home">
 			<h2>Galaxy Note 5</h2>
 		</a>
 		<p>Màn hình: 5.7"</p>
