--- a/items/htc-desire-816.html
+++ b/items/htc-desire-816.html
@@ -2,16 +2,16 @@
 	<head>
 		<title>NDT Shop</title>
 		<meta charset="utf-8">
-		<link rel="stylesheet" type="text/css" href="../css/style-item.css">
+		<link rel="stylesheet" type="text/css" href="/css/style-item.css">
 	</head>
 	<body>
 	<div class="item-image">
-		<a href="../index.html" title="Home">
-			<img src="../img/htc-desire-816-en-slide-02-zoom.jpg" alt="HTC Desire 816" />
+		<a href="/index.html" title="Home">
+			<img src="/img/htc-desire-816-en-slide-02-zoom.jpg" alt="HTC Desire 816" />
 		</a>
 	</div>
 	<div class="item-detail">
-		<a href="../index.html" title="Home">
+		<a href="/index.html" title="Home">
 			<h2>HTC Desire 816</h2>
 		</a>
 		<p>Màn hình: 5.5"</p>
