--- a/items/iphone-6s.html
+++ b/items/iphone-6s.html
@@ -2,16 +2,16 @@
 	<head>
 		<title>NDT Shop</title>
 		<meta charset="utf-8">
-		<link rel="stylesheet" type="text/css" href="../css/style-item.css">
+		<link rel="stylesheet" type="text/css" href="/css/style-item.css">
 	</head>
 	<body>
 	<div class="item-image">
-		<a href="../index.html" title="Home">
-			<img src="../img/iphone-6s.jpg" alt="iPhone 6s" />
+		<a href="/index.html" title="Home">
+			<img src="/img/iphone-6s.jpg" alt="iPhone 6s" />
 		</a>
 	</div>
 	<div class="item-detail">
-		<a href="../index.html" title="Home">
+		<a href="/index.html" title="Home">
 			<h2>iPhone 6s</h2>
 		</a>
 		<p>Màn hình: 4.7"</p>
