--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 	<head>
 		<title>NDT Shop</title>
 		<meta charset="utf-8">
-		<link rel="stylesheet" type="text/css" href="css/style.css">
+		<link rel="stylesheet" type="text/css" href="/css/style.css">
 	</head>
 	<body>
 		<div class="title">
@@ -11,60 +11,60 @@
 		</div>
 		<div class="item">
 			<div class="product_image">
-				<a href="items/iphone-5s.html" title="iPhone 5s">
-					<img src="img/Apple-iPhone-5s.jpg" alt="iPhone 5s" />
+				<a href="/items/iphone-5s.html" title="iPhone 5s">
+					<img src="/img/Apple-iPhone-5s.jpg" alt="iPhone 5s" />
 				</a>
 			</div>
 			<div class="product_title">
-				<a href="items/iphone-5s.html" title="iPhone 5s">
+				<a href="/items/iphone-5s.html" title="iPhone 5s">
 					<h2>iPhone 5s</h2>
 				</a>
 			</div>
 		</div>
 		<div class="item">
 			<div class="product_image">
-				<a href="items/iphone-6s.html" title="iPhone 6s">
-					<img src="img/iphone-6s.jpg" alt="iPhone 6s" />
+				<a href="/items/iphone-6s.html" title="iPhone 6s">
+					<img src="/img/iphone-6s.jpg" alt="iPhone 6s" />
 				</a>
 			</div>
 			<div class="product_title">
-				<a href="items/iphone-6s.html" title="iPhone 6s">
+				<a href="/items/iphone-6s.html" title="iPhone 6s">
 					<h2>iPhone 6s</h2>
 				</a>
 			</div>
 		</div>
 		<div class="item">
 			<div class="product_image">
-				<a href="items/galaxy-note5.html" title="Galaxy Note 5">
-					<img src="img/Samsung-Galaxy-Note-5-0.jpg" alt="Galaxy Note 5" />
+				<a href="/items/galaxy-note5.html" title="Galaxy Note 5">
+					<img src="/img/Samsung-Galaxy-Note-5-0.jpg" alt="Galaxy Note 5" />
 				</a>
 			</div>
 			<div class="product_title">
-				<a href="items/galaxy-note5.html" title="Galaxy Note 5">
+				<a href="/items/galaxy-note5.html" title="Galaxy Note 5">
 					<h2>Galaxy Note 5</h2>
 				</a>
 			</div>
 		</div>
 		<div class="item">
 			<div class="product_image">
-				<a href="items/phone-s30.html" title="Phone S30">
-					<img src="img/phone-s30.png" alt="Phone S30" />
+				<a href="/items/phone-s30.html" title="Phone S30">
+					<img src="/img/phone-s30.png" alt="Phone S30" />
 				</a>
 			</div>
 			<div class="product_title">
-				<a href="items/phone-s30.html" title="Phone S30">
+				<a href="/items/phone-s30.html" title="Phone S30">
 					<h2>Phone S30</h2>
 				</a>
 			</div>
 		</div>
 		<div class="item">
 			<div class="product_image">
-				<a href="items/galaxy-note-edge.html" title="Galaxy Note Edge">
-					<img src="img/Samsung-Galaxy-Note-Edge.jpg" alt="Galaxy Note Edge" />
+				<a href="/items/galaxy-note-edge.html" title="Galaxy Note Edge">
+					<img src="/img/Samsung-Galaxy-Note-Edge.jpg" alt="Galaxy Note Edge" />
 				</a>
 			</div>
 			<div class="product_title">
-				<a href="items/galaxy-note-edge.html" title="Galaxy Note Edge">
+				<a href="/items/galaxy-note-edge.html" title="Galaxy Note Edge">
 					<h2>Galaxy Note Edge</h2>
 				</a>
 			</div>
@@ -72,12 +72,12 @@
 
 		<div class="item">
 			<div class="product_image">
-				<a href="items/blackberry-priv.html" title="BlackBerry Priv">
-					<img src="img/DTEK-Security-BlackBerry-Priv.png" alt="BlackBerry Priv" />
+				<a href="/items/blackberry-priv.html" title="BlackBerry Priv">
+					<img src="/img/DTEK-Security-BlackBerry-Priv.png" alt="BlackBerry Priv" />
 				</a>
 			</div>
 			<div class="product_title">
-				<a href="items/blackberry-priv.html" title="BlackBerry Priv">
+				<a href="/items/blackberry-priv.html" title="BlackBerry Priv">
 					<h2>BlackBerry Priv</h2>
 				</a>
 			</div>
@@ -85,12 +85,12 @@
 
 		<div class="item">
 			<div class="product_image">
-				<a href="items/nokia-lumia.html" title="Nokia Lumia">
-					<img src="img/Nokia-Lumia-Icon.jpg" alt="Nokia Lumia" />
+				<a href="/items/nokia-lumia.html" title="Nokia Lumia">
+					<img src="/img/Nokia-Lumia-Icon.jpg" alt="Nokia Lumia" />
 				</a>
 			</div>
 			<div class="product_title">
-				<a href="items/nokia-lumia.html" title="Nokia Lumia">
+				<a href="/items/nokia-lumia.html" title="Nokia Lumia">
 					<h2>Nokia Lumia</h2>
 				</a>
 			</div>
@@ -98,12 +98,12 @@
 
 		<div class="item">
 			<div class="product_image">
-				<a href="items/iphone-6s-plus.html" title="iPhond 6s plus">
-					<img src="img/iphone-6s-plus-64gb-vang-dong-org-1.png" alt="iPhond 6s plus" />
+				<a href="/items/iphone-6s-plus.html" title="iPhond 6s plus">
+					<img src="/img/iphone-6s-plus-64gb-vang-dong-org-1.png" alt="iPhond 6s plus" />
 				</a>
 			</div>
 			<div class="product_title">
-				<a href="items/iphone-6s-plus.html" title="iPhond 6s plus">
+				<a href="/items/iphone-6s-plus.html" title="iPhond 6s plus">
 					<h2>iPhone 6s plus</h2>
 				</a>
 			</div>
@@ -111,12 +111,12 @@
 
 		<div class="item">
 			<div class="product_image">
-				<a href="items/htc-desire-816.html" title="HTC Desire 816">
-					<img src="img/htc-desire-816-en-slide-02-zoom.jpg" alt="HTC Desire 816" />
+				<a href="/items/htc-desire-816.html" title="HTC Desire 816">
+					<img src="/img/htc-desire-816-en-slide-02-zoom.jpg" alt="HTC Desire 816" />
 				</a>
 			</div>
 			<div class="product_title">
-				<a href="items/htc-desire-816.html" title="HTC Desire 816">
+				<a href="/items/htc-desire-816.html" title="HTC Desire 816">
 					<h2>HTC Desire 816</h2>
 				</a>
 			</div>
@@ -124,12 +124,12 @@
 
 		<div class="item">
 			<div class="product_image">
-				<a href="items/acer-liquid-z200.html" title="Acer Liquid Z200">
-					<img src="img/Acer-Liquid-Z200.jpg" alt="Acer Liquid Z200" />
+				<a href="/items/acer-liquid-z200.html" title="Acer Liquid Z200">
+					<img src="/img/Acer-Liquid-Z200.jpg" alt="Acer Liquid Z200" />
 				</a>
 			</div>
 			<div class="product_title">
-				<a href="items/acer-liquid-z200.html" title="Acer Liquid Z200">
+				<a href="/items/acer-liquid-z200.html" title="Acer Liquid Z200">
 					<h2>Acer Liquid Z200</h2>
 				</a>			
 			</div>
