--- a/items/blackBerry-priv.html
+++ b/items/blackBerry-priv.html
@@ -2,16 +2,16 @@
 	<head>
 		<title>NDT Shop</title>
 		<meta charset="utf-8">
-		<link rel="stylesheet" type="text/css" href="../css/style-item.css">
+		<link rel="stylesheet" type="text/css" href="/css/style-item.css">
 	</head>
 	<body>
 	<div class="item-image">
-		<a href="../index.html" title="Home">
-			<img src="../img/DTEK-Security-BlackBerry-Priv.png" alt="BlackBerry Priv" />
+		<a href="/index.html" title="Home">
+			<img src="/img/DTEK-Security-BlackBerry-Priv.png" alt="BlackBerry Priv" />
 		</a>
 	</div>
 	<div class="item-detail">
-		<a href="../index.html" title="Home">
+		<a href="/index.html" title="Home">
 			<h2>BlackBerry Priv</h2>
 		</a>
 		<p>Màn hình: 5.4"</p>
