--- a/items/nokia-lumia.html
+++ b/items/nokia-lumia.html
@@ -2,16 +2,16 @@
 	<head>
 		<title>NDT Shop</title>
 		<meta charset="utf-8">
-		<link rel="stylesheet" type="text/css" href="../css/style-item.css">
+		<link rel="stylesheet" type="text/css" href="/css/style-item.css">
 	</head>
 	<body>
 	<div class="item-image">
-		<a href="../index.html" title="Home">
-			<img src="../img/Nokia-Lumia-Icon.jpg" alt="Nokia Lumia" />
+		<a href="/index.html" title="Home">
+			<img src="/img/Nokia-Lumia-Icon.jpg" alt="Nokia Lumia" />
 		</a>
 	</div>
 	<div class="item-detail">
-		<a href="../index.html" title="Home">
+		<a href="/index.html" title="Home">
 			<h2>Nokia Lumia</h2>
 		</a>
 		<p>Màn hình: 5"</p>
