--- a/items/phone-s30.html
+++ b/items/phone-s30.html
@@ -2,16 +2,16 @@
 	<head>
 		<title>NDT Shop</title>
 		<meta charset="utf-8">
-		<link rel="stylesheet" type="text/css" href="../css/style-item.css">
+		<link rel="stylesheet" type="text/css" href="/css/style-item.css">
 	</head>
 	<body>
 	<div class="item-image">
-		<a href="../index.html" title="Home">
-			<img src="../img/phone-s30.png" alt="Phone S30" />
+		<a href="/index.html" title="Home">
+			<img src="/img/phone-s30.png" alt="Phone S30" />
 		</a>
 	</div>
 	<div class="item-detail">
-		<a href="../index.html" title="Home">
+		<a href="/index.html" title="Home">
 			<h2>Phone S30</h2>
 		</a>
 		<p>Màn hình: 4.5"</p>
