add title for image

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<div class="item">
 			<div class="product_image">
 				<a href="/items/iphone-5s.html" title="iPhone 5s">
-					<img src="/img/Apple-iPhone-5s.jpg" alt="iPhone 5s" />
+					<img src="/img/Apple-iPhone-5s.jpg" title="iPhone 5s" alt="iPhone 5s" />
 				</a>
 			</div>
 			<div class="product_title">
@@ -24,7 +24,7 @@
 		<div class="item">
 			<div class="product_image">
 				<a href="/items/iphone-6s.html" title="iPhone 6s">
-					<img src="/img/iphone-6s.jpg" alt="iPhone 6s" />
+					<img src="/img/iphone-6s.jpg" title="iPhone 6s" alt="iPhone 6s" />
 				</a>
 			</div>
 			<div class="product_title">
@@ -36,7 +36,7 @@
 		<div class="item">
 			<div class="product_image">
 				<a href="/items/galaxy-note5.html" title="Galaxy Note 5">
-					<img src="/img/Samsung-Galaxy-Note-5-0.jpg" alt="Galaxy Note 5" />
+					<img src="/img/Samsung-Galaxy-Note-5-0.jpg" title="Galaxy Note 5" alt="Galaxy Note 5" />
 				</a>
 			</div>
 			<div class="product_title">
@@ -48,7 +48,7 @@
 		<div class="item">
 			<div class="product_image">
 				<a href="/items/phone-s30.html" title="Phone S30">
-					<img src="/img/phone-s30.png" alt="Phone S30" />
+					<img src="/img/phone-s30.png" title="Phone S30" alt="Phone S30" />
 				</a>
 			</div>
 			<div class="product_title">
@@ -60,7 +60,7 @@
 		<div class="item">
 			<div class="product_image">
 				<a href="/items/galaxy-note-edge.html" title="Galaxy Note Edge">
-					<img src="/img/Samsung-Galaxy-Note-Edge.jpg" alt="Galaxy Note Edge" />
+					<img src="/img/Samsung-Galaxy-Note-Edge.jpg" title="Galaxy Note Edge" alt="Galaxy Note Edge" />
 				</a>
 			</div>
 			<div class="product_title">
@@ -73,7 +73,7 @@
 		<div class="item">
 			<div class="product_image">
 				<a href="/items/blackberry-priv.html" title="BlackBerry Priv">
-					<img src="/img/DTEK-Security-BlackBerry-Priv.png" alt="BlackBerry Priv" />
+					<img src="/img/DTEK-Security-BlackBerry-Priv.png" title="BlackBerry Priv" alt="BlackBerry Priv" />
 				</a>
 			</div>
 			<div class="product_title">
@@ -86,7 +86,7 @@
 		<div class="item">
 			<div class="product_image">
 				<a href="/items/nokia-lumia.html" title="Nokia Lumia">
-					<img src="/img/Nokia-Lumia-Icon.jpg" alt="Nokia Lumia" />
+					<img src="/img/Nokia-Lumia-Icon.jpg" title="Nokia Lumia" alt="Nokia Lumia" />
 				</a>
 			</div>
 			<div class="product_title">
@@ -99,7 +99,7 @@
 		<div class="item">
 			<div class="product_image">
 				<a href="/items/iphone-6s-plus.html" title="iPhond 6s plus">
-					<img src="/img/iphone-6s-plus-64gb-vang-dong-org-1.png" alt="iPhond 6s plus" />
+					<img src="/img/iphone-6s-plus-64gb-vang-dong-org-1.png" title="iPhond 6s plus" alt="iPhond 6s plus" />
 				</a>
 			</div>
 			<div class="product_title">
@@ -112,7 +112,7 @@
 		<div class="item">
 			<div class="product_image">
 				<a href="/items/htc-desire-816.html" title="HTC Desire 816">
-					<img src="/img/htc-desire-816-en-slide-02-zoom.jpg" alt="HTC Desire 816" />
+					<img src="/img/htc-desire-816-en-slide-02-zoom.jpg" title="HTC Desire 816" alt="HTC Desire 816" />
 				</a>
 			</div>
 			<div class="product_title">
@@ -125,7 +125,7 @@
 		<div class="item">
 			<div class="product_image">
 				<a href="/items/acer-liquid-z200.html" title="Acer Liquid Z200">
-					<img src="/img/Acer-Liquid-Z200.jpg" alt="Acer Liquid Z200" />
+					<img src="/img/Acer-Liquid-Z200.jpg" title="Acer Liquid Z200" alt="Acer Liquid Z200" />
 				</a>
 			</div>
 			<div class="product_title">
