--- a/imagegalery/about.html
+++ b/imagegalery/about.html
@@ -9,7 +9,7 @@
 <body>
   <div class="wrap">
     <div id="banner">
-      <img src="/img/mobile-phone-banner.jpg" alt="banner">
+      <img src="/img/mobile-phone-banner.jpg" title="banner" alt="banner">
     </div>
     <div id="main-menu">
       <a id="home" href="/imagegalery/home.html" title="Home">Home</a>
