--- a/imagegalery/home.html
+++ b/imagegalery/home.html
@@ -8,7 +8,7 @@
   <body>
   <div class="wrap">
   <div id="banner">
-      <img src="/img/mobile-phone-banner.jpg" alt="banner">
+      <img src="/img/mobile-phone-banner.jpg" title="banner" alt="banner">
   </div>
   <div id="main-menu">
       <a id="home" href="/imagegalery/home.html" title="Home" class="active">Home</a>
