--- a/imagegalery/galery.html
+++ b/imagegalery/galery.html
@@ -11,6 +11,7 @@
       <img src="/img/mobile-phone-banner.jpg" title="banner" alt="banner">
     </div>
     <div id="main-menu">
+      <a href="#"><img src="/img/chicken.jpg" title="My Icon" alt="chicken.jpg"/></a>
       <a id="home" href="/imagegalery/home.html" title="Home">Home</a>
       <a id="galery" href="/imagegalery/galery.html" title="Galery" class="active">Galery</a>
       <a id="about" href="/imagegalery/about.html" title="About">About</a>
@@ -76,6 +77,12 @@
           <img src="/img/Acer-Liquid-Z200.jpg" title="Acer Liquid Z200" alt="Acer Liquid Z200" />
         </a>
       </div>
+    </div>
+    <div id="footer">
+      <p>Copyright &copy; 2016</p>
+    </div>
+    <div id="back-to-top">
+      <a href="#"><img src="/img/back_to_top_icon.png" title="back to top button" alt="back_to_top_icon.png" /></a>
     </div>
   </div>
 </body>
