--- a/imagegalery/home.html
+++ b/imagegalery/home.html
@@ -11,15 +11,21 @@
       <img src="/img/mobile-phone-banner.jpg" title="banner" alt="banner">
   </div>
   <div id="main-menu">
-      <a id="home" href="/imagegalery/home.html" title="Home" class="active">Home</a>
-      <a id="galery" href="/imagegalery/galery.html" title="Galery">Galery</a>
-      <a id="about" href="/imagegalery/about.html" title="About">About</a>
+    <a href="#"><img src="/img/chicken.jpg" title="My Icon" alt="chicken.jpg"/></a>
+    <a id="home" href="/imagegalery/home.html" title="Home" class="active">Home</a>
+    <a id="galery" href="/imagegalery/galery.html" title="Galery">Galery</a>
+    <a id="about" href="/imagegalery/about.html" title="About">About</a>
   </div>
   <div id="main-content">
     <p>
       Home Page
     </p>
+    <div id="footer">
+        <p>Copyright &copy; 2016</p>
+    </div>
+    <div id="back-to-top">
+      <a href="#"><img src="/img/back_to_top_icon.png" title="back to top button" alt="back_to_top_icon.png" /></a>
+    </div>
   </div>
-  </div>
-  </body>
+</body>
 </html>
