--- a/imagegalery/about.html
+++ b/imagegalery/about.html
@@ -12,6 +12,7 @@
       <img src="/img/mobile-phone-banner.jpg" title="banner" alt="banner">
     </div>
     <div id="main-menu">
+      <a href="#"><img src="/img/chicken.jpg" title="My Icon" alt="chicken.jpg"/></a>
       <a id="home" href="/imagegalery/home.html" title="Home">Home</a>
       <a id="galery" href="/imagegalery/galery.html" title="Galery">Galery</a>
       <a id="about" href="/imagegalery/about.html" title="About" class="active">About</a>
@@ -48,6 +49,12 @@
 
         <div>Address: <span>Hanoi, Vietnam</span></div>
       </div>
+    </div>
+    <div id="footer">
+      <p>Copyright &copy; 2016</p>
+    </div>
+    <div id="back-to-top">
+      <a href="#"><img src="/img/back_to_top_icon.png" title="back to top button" alt="back_to_top_icon.png" /></a>
     </div>
   </div>
 </body>
