add alt for image

--- a/imagegalery/home.html
+++ b/imagegalery/home.html
@@ -8,7 +8,7 @@
   <body>
   <div class="wrap">
   <div id="banner">
-      <img src="/img/mobile-phone-banner.jpg" title="banner" alt="banner">
+      <img src="/img/mobile-phone-banner.jpg" title="banner" alt="mobile-phone-banner.jpg">
   </div>
   <div id="main-menu">
     <a href="#"><img src="/img/chicken.jpg" title="My Icon" alt="chicken.jpg"/></a>
