--- a/menu-doc/about.html
+++ b/menu-doc/about.html
@@ -13,9 +13,9 @@
     </div>
     <div id="main-menu">
       <a href="#"><img src="/img/chicken.jpg" title="My Icon" alt="chicken.jpg"/></a>
-      <a id="home" href="/imagegalery/home.html" title="Home">Home</a>
-      <a id="galery" href="/imagegalery/galery.html" title="Galery">Galery</a>
-      <a id="about" href="/imagegalery/about.html" title="About" class="active">About</a>
+      <a id="home" href="/menu-doc/home.html" title="Home">Home</a>
+      <a id="galery" href="/menu-doc/galery.html" title="Galery">Galery</a>
+      <a id="about" href="/menu-doc/about.html" title="About" class="active">About</a>
     </div>
     <h1>Full Name: Nhu Dinh Tao</h1>
 
