--- a/menu-doc/home.html
+++ b/menu-doc/home.html
@@ -12,9 +12,9 @@
   </div>
   <div id="main-menu">
     <a href="#"><img src="/img/chicken.jpg" title="My Icon" alt="chicken.jpg"/></a>
-    <a id="home" href="/imagegalery/home.html" title="Home" class="active">Home</a>
-    <a id="galery" href="/imagegalery/galery.html" title="Galery">Galery</a>
-    <a id="about" href="/imagegalery/about.html" title="About">About</a>
+    <a id="home" href="/menu-doc/home.html" title="Home" class="active">Home</a>
+    <a id="galery" href="/menu-doc/galery.html" title="Galery">Galery</a>
+    <a id="about" href="/menu-doc/about.html" title="About">About</a>
   </div>
   <div id="main-content">
     <p>
