--- a/menu-doc/galery.html
+++ b/menu-doc/galery.html
@@ -2,8 +2,8 @@
 <head>
   <title>Image Galery</title>
   <meta charset="utf-8">
-  <link rel="stylesheet" type="text/css" href="/css/style-main-galery.css">
-  <link rel="stylesheet" type="text/css" href="/css/style-galery.css">
+  <link rel="stylesheet" type="text/css" href="/menu-doc/css/style-main-galery.css">
+  <link rel="stylesheet" type="text/css" href="/menu-doc/css/style-galery.css">
 </head>
 <body>
   <div class="wrap">
