--- a/menu-doc/home.html
+++ b/menu-doc/home.html
@@ -2,8 +2,8 @@
   <head>
     <title>Home</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="/css/style-main-galery.css">
-    <link rel="stylesheet" type="text/css" href="/css/style-about.css">
+    <link rel="stylesheet" type="text/css" href="/menu-doc/css/style-main-galery.css">
+    <link rel="stylesheet" type="text/css" href="/menu-doc/css/style-home.css">
   </head>
   <body>
   <div class="wrap">
@@ -17,7 +17,7 @@
     <a id="about" href="/menu-doc/about.html" title="About">About</a>
   </div>
   <div id="main-content">
-    <p>
+    <p style="padding=30px">
       Home Page
     </p>
     <div id="footer">
