--- a/menu-doc/about.html
+++ b/menu-doc/about.html
@@ -2,8 +2,8 @@
 <head>
   <title>About</title>
   <meta charset="utf-8">
-  <link rel="stylesheet" type="text/css" href="/css/style-main-galery.css">
-  <link rel="stylesheet" type="text/css" href="/css/style-about.css">
+  <link rel="stylesheet" type="text/css" href="/menu-doc/css/style-main-galery.css">
+  <link rel="stylesheet" type="text/css" href="/menu-doc/css/style-about.css">
 </head>
 
 <body>
