--- a/greetingcard/index.html
+++ b/greetingcard/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 	    <title>Happy birthday!</title>
-	    <meta charset="utf-8">
+	    <meta charset="utf-8"/>
 	    <link href="css/style.css" rel="stylesheet" type="text/css" media="all"/>
 	</head>
 	<body>
