--- a/restaurant/items/desserts.html
+++ b/restaurant/items/desserts.html
@@ -6,7 +6,7 @@
 	</title>
 	<meta charset="utf-8"/>
 	<link href="/restaurant/css/style.css" rel="stylesheet" type="text/css"/>
-	<link href="/restaurant/css/desserts.css" rel="stylesheet" type="text/css"/>
+	<link href="/restaurant/css/menu.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
 	<div class="wrapper">
@@ -26,6 +26,90 @@
 			<div class="clear"></div>
 		</div>
 		<div class="main_content">
+			<h1>Desserts</h1>
+			<div class="cell">
+				<div class="thumb">
+					<img src="/restaurant/img/Flan-caramel.png" alt="Flan-caramel.png" title="Flan caramel" />
+				</div>
+
+				<div class="bg">
+					<div class="msg-wrap">
+						<div class="msg">
+							Flan caramel
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<div class="cell">
+				<div class="thumb">
+					<img src="/restaurant/img/Ice-cream-with-warm-chocolate.jpg" alt="Ice-cream-with-warm-chocolate.jpg" title="Ice cream with warm chocolate" />
+				</div>
+
+				<div class="bg">
+					<div class="msg-wrap">
+						<div class="msg">
+							Ice cream with warm chocolate
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<div class="cell">
+				<div class="thumb">
+					<img src="/restaurant/img/Banana-chocolate.jpg" alt="Banana-chocolate.jpg" title="Banana with chocolate" />
+				</div>
+
+				<div class="bg">
+					<div class="msg-wrap">
+						<div class="msg">
+							Banana with chocolate
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<div class="cell">
+				<div class="thumb">
+					<img src="/restaurant/img/Apple-tart-ice-cream.jpg" alt="Apple-tart-ice-cream.jpg" title="Apple tart with ice cream" />
+				</div>
+
+				<div class="bg">
+					<div class="msg-wrap">
+						<div class="msg">
+							Apple tart with ice cream
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<div class="cell">
+				<div class="thumb">
+					<img src="/restaurant/img/Tart-ice-cream-chocolate.jpg" alt="Tart-ice-cream-chocolate.jpg" title="Tart of the day with ice cream and chocolate" />
+				</div>
+
+				<div class="bg">
+					<div class="msg-wrap">
+						<div class="msg">
+							Tart of the day with ice cream and chocolate
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<div class="cell">
+				<div class="thumb">
+					<img src="/restaurant/img/Profiteroles-ice-cream-chocolate.jpg" alt="Profiteroles-ice-cream-chocolate.jpg" title="Profiteroles with ice cream and chocolate" />
+				</div>
+
+				<div class="bg">
+					<div class="msg-wrap">
+						<div class="msg">
+							Profiteroles with ice cream and chocolate
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
 		<div id="footer">
 			<p>
