--- a/restaurant/items/main-course.html
+++ b/restaurant/items/main-course.html
@@ -6,7 +6,7 @@
 	</title>
 	<meta charset="utf-8"/>
 	<link href="/restaurant/css/style.css" rel="stylesheet" type="text/css"/>
-	<link href="/restaurant/css/contact.css" rel="stylesheet" type="text/css"/>
+	<link href="/restaurant/css/menu.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
 	<div class="wrapper">
@@ -26,6 +26,90 @@
 			<div class="clear"></div>
 		</div>
 		<div class="main_content">
+			<h1>Main Course</h1>
+			<div class="cell">
+				<div class="thumb">
+					<img src="/restaurant/img/Jumbo-Crab-meat-beef-fillet-mignon.jpg" alt="Jumbo-Crab-meat-beef-fillet-mignon.jpg" title="Jumbo Crab meat &amp; beef fillet mignon" />
+				</div>
+
+				<div class="bg">
+					<div class="msg-wrap">
+						<div class="msg">
+							Jumbo Crab meat &amp; beef fillet mignon
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<div class="cell">
+				<div class="thumb">
+					<img src="/restaurant/img/Beef-rib-eyes-beef-cube-roll.jpg" alt="Beef-rib-eyes-beef-cube-roll.jpg" title="Beef rib-eyes beef cube roll" />
+				</div>
+
+				<div class="bg">
+					<div class="msg-wrap">
+						<div class="msg">
+							Beef rib-eyes “beef cube roll”
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<div class="cell">
+				<div class="thumb">
+					<img src="/restaurant/img/Beef-strip-loin.jpg" alt="Beef-strip-loin.jpg" title="Beef strip-loin" />
+				</div>
+
+				<div class="bg">
+					<div class="msg-wrap">
+						<div class="msg">
+							Beef strip-loin
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<div class="cell">
+				<div class="thumb">
+					<img src="/restaurant/img/Grilled-T-Bone-steak.jpg" alt="Grilled-T-Bone-steak.jpg" title="Grilled T-Bone steak" />
+				</div>
+
+				<div class="bg">
+					<div class="msg-wrap">
+						<div class="msg">
+							Grilled T-Bone steak
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<div class="cell">
+				<div class="thumb">
+					<img src="/restaurant/img/Lamb-chops.jpg" alt="Lamb-chops.jpg" title="Lamb chops" />
+				</div>
+
+				<div class="bg">
+					<div class="msg-wrap">
+						<div class="msg">
+							Lamb chops
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<div class="cell">
+				<div class="thumb">
+					<img src="/restaurant/img/Local-beef-fillet.jpg" alt="Local-beef-fillet.jpg" title="Local beef fillet " />
+				</div>
+
+				<div class="bg">
+					<div class="msg-wrap">
+						<div class="msg">
+							Local beef fillet
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
 		<div id="footer">
 			<p>
