--- a/restaurant/items/starter.html
+++ b/restaurant/items/starter.html
@@ -6,7 +6,7 @@
 	</title>
 	<meta charset="utf-8"/>
 	<link href="/restaurant/css/style.css" rel="stylesheet" type="text/css"/>
-	<link href="/restaurant/css/contact.css" rel="stylesheet" type="text/css"/>
+	<link href="/restaurant/css/stater.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
 	<div class="wrapper">
@@ -26,6 +26,90 @@
 			<div class="clear"></div>
 		</div>
 		<div class="main_content">
+			<h1>Starter</h1>
+			<div class="cell">
+				<div class="thumb">
+					<img src="/restaurant/img/Delicatessen-cold-cut-platter.jpg" alt="Delicatessen-cold-cut-platter.jpg" title="Delicatessen cold cut platter" />
+				</div>
+
+				<div class="bg">
+					<div class="msg-wrap">
+						<div class="msg">
+							Delicatessen cold cut platter
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<div class="cell">
+				<div class="thumb">
+					<img src="/restaurant/img/Smoked-salmon-with-brie-cheese.jpg" alt="Smoked-salmon-with-brie-cheese.jpg" title="Smoked salmon with brie cheese" />
+				</div>
+
+				<div class="bg">
+					<div class="msg-wrap">
+						<div class="msg">
+							Smoked salmon with brie cheese
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<div class="cell">
+				<div class="thumb">
+					<img src="/restaurant/img/Parma-ham-with-melon-Seasonal.jpg" alt="Parma-ham-with-melon-Seasonal.jpg" title="Parma ham with melon (Seasonal)" />
+				</div>
+
+				<div class="bg">
+					<div class="msg-wrap">
+						<div class="msg">
+							Parma ham with melon (Seasonal)
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<div class="cell">
+				<div class="thumb">
+					<img src="/restaurant/img/Salmon-Carpaccio.jpg" alt="Salmon-Carpaccio.jpg" title="Salmon Carpaccio" />
+				</div>
+
+				<div class="bg">
+					<div class="msg-wrap">
+						<div class="msg">
+							Salmon Carpaccio
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<div class="cell">
+				<div class="thumb">
+					<img src="/restaurant/img/Beef-Carpaccio.jpg" alt="Beef-Carpaccio.jpg" title="Beef Carpaccio" />
+				</div>
+
+				<div class="bg">
+					<div class="msg-wrap">
+						<div class="msg">
+							Beef Carpaccio
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<div class="cell">
+				<div class="thumb">
+					<img src="/restaurant/img/Our-sampler-plate-smoked-salmon-charcuterie-cheese.jpg" alt="Our-sampler-plate-smoked-salmon-charcuterie-cheese.jpg" title="Our sampler plate of smoked salmon, charcuterie and cheese" />
+				</div>
+
+				<div class="bg">
+					<div class="msg-wrap">
+						<div class="msg">
+							Our sampler plate of smoked salmon, charcuterie and cheese
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
 		<div id="footer">
 			<p>
