change menu style

--- a/restaurant/items/starter.html
+++ b/restaurant/items/starter.html
@@ -6,7 +6,7 @@
 	</title>
 	<meta charset="utf-8"/>
 	<link href="/restaurant/css/style.css" rel="stylesheet" type="text/css"/>
-	<link href="/restaurant/css/stater.css" rel="stylesheet" type="text/css"/>
+	<link href="/restaurant/css/menu.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
 	<div class="wrapper">
