--- a/restaurant/index.html
+++ b/restaurant/index.html
@@ -6,6 +6,7 @@
 	</title>
 	<meta charset="utf-8"/>
 	<link href="/restaurant/css/style.css" rel="stylesheet" type="text/css" media="all"/>
+	<link href="/restaurant/css/home.css" rel="stylesheet" type="text/css" media="all"/>
 </head>
 <body>
 	<div class="wrapper">
@@ -25,6 +26,67 @@
 			<div class="clear"></div>
 		</div>
 		<div class="main_content">
+			<h1>New tastes with discount 20%</h1>
+			<div class="item">
+				<div class="imageview">
+					<img src="/restaurant/img/1-cahoisongthaihatluu.jpg">
+				</div>
+				<div class="bg">
+					<div class="textview">
+						Salmon tartar with mellow goat chesse &amp; pink pepper corn, dry fruits &amp; herbs dressing
+					</div>
+				</div>
+			</div>
+			<div class="item">
+				<div class="imageview">
+					<img src="/restaurant/img/2-Canguphubotnuonggionvoivung.jpg">
+				</div>
+				<div class="bg">
+					<div class="textview">
+						Crusted red tuna with thyme &amp; sesame, mushroom &amp; asparagus risotto in wasabi, ginger red   wine sauce												
+					</div>
+				</div>
+			</div>
+			<div class="item">
+				<div class="imageview">
+					<img src="/restaurant/img/4-banhtiramisuY.jpg">
+				</div>
+				<div class="bg">
+					<div class="textview">
+						Salmon tartar with mellow goat chesse &amp; pink pepper corn, dry fruits &amp; herbs dressing
+					</div>
+				</div>
+			</div>
+			<div class="item">
+				<div class="imageview">
+					<img src="/restaurant/img/5-Ca-vuoc-tamgiavinuongsotbochanh.jpg">
+				</div>
+				<div class="bg">
+					<div class="textview">
+						Tiramisu with chestnut cream in Amaretto liquor, crispy chocolate
+					</div>
+				</div>
+			</div>
+			<div class="item">
+				<div class="imageview">
+					<img src="/restaurant/img/6-banhchancuu-Mille-feuille.jpg">
+				</div>
+				<div class="bg">
+					<div class="textview">
+						Sea bass  meunière in spices, pumpkin salad &amp; citrus
+					</div>
+				</div>
+			</div>
+			<div class="item">
+				<div class="imageview">
+					<img src="/restaurant/img/7-SodiepnuongMyY.jpg">
+				</div>
+				<div class="bg">
+					<div class="textview">
+						Pan-fried scallops, seafood lasagna with mushrooms &amp; vegetables, saffron emulsion
+					</div>
+				</div>
+			</div>
 		</div>
 		<div id="footer">
 		<p>
