--- a/restaurant/contact.html
+++ b/restaurant/contact.html
@@ -31,29 +31,29 @@
 			<h2>Au Délice & Le Restaurant d'Arthur</h2></br>
 
 			<p>
-			<b>Add:</b>	<span>2B Ngo Thi Nham st., Hanoi - Vietnam</span></br>
-			<b>Reservation call:</b>	<span>(04) 39449288 - 0904150383</span></br>
-			<b>Fax:</b>	<span>(04) 39449289</span></br>
-			<b>Email:</b>	<span>info@au-delice.com - au-delice@vnn.vn</span></br></br>
-			<b>Le Restaurant d'Arthur Operation:</b></br>
-			<b>Lunch:</b>	<span>10:00-14:00</span></br>
-			<b>Dinner:</b>	<span>17:30 - 22:00</span></br></br>
+				<b>Add:</b>	<span>2B Ngo Thi Nham st., Hanoi - Vietnam</span></br>
+				<b>Reservation call:</b>	<span>(04) 39449288 - 0904150383</span></br>
+				<b>Fax:</b>	<span>(04) 39449289</span></br>
+				<b>Email:</b>	<span>info@au-delice.com - au-delice@vnn.vn</span></br></br>
+				<b>Le Restaurant d'Arthur Operation:</b></br>
+				<b>Lunch:</b>	<span>10:00-14:00</span></br>
+				<b>Dinner:</b>	<span>17:30 - 22:00</span></br></br>
 			</p>
-			 <p>
-			<b>Au Délice Operation:</b></br>
-			<b>Mon-Sat:</b>	<span>8:00-22:00</span></br>
-			<b>Sunday:</b>	<span>9:00-22:00</span></br>
+			<p>
+				<b>Au Délice Operation:</b></br>
+				<b>Mon-Sat:</b>	<span>8:00-22:00</span></br>
+				<b>Sunday:</b>	<span>9:00-22:00</span></br>
 			</p>
 		</div>
 		<img id="contact-map" src="img/map.png" alt="map.png" title="Map">
-		</div>
-		<div id="footer">
-		<p>
-			Au Delice &amp; Le Restaurant d'Arthur - 2B Đường Ngô Thì Nhậm, Hà Nội - Việt Nam</br></br>
-
-			Phone: (04) 39449288 - 0904150383 - Fax: (04) 39449289
-		</p>
-		</div>
 	</div>
+	<div id="footer">
+		<p>
+			Au Delice & Le Restaurant d'Arthur - 2B Ngo Thi Nham st., Hanoi - Vietnam</br></br>
+
+			Reservation call (04) 39449288 - 0904150383 - Fax: (04) 39449289
+		</p>
+	</div>
+</div>
 </body>
 </html>
