--- a/restaurant/items/starter.html
+++ b/restaurant/items/starter.html
@@ -113,9 +113,9 @@
 		</div>
 		<div id="footer">
 			<p>
-				Au Delice &amp; Le Restaurant d'Arthur - 2B Đường Ngô Thì Nhậm, Hà Nội - Việt Nam</br></br>
+				Au Delice & Le Restaurant d'Arthur - 2B Ngo Thi Nham st., Hanoi - Vietnam</br></br>
 
-				Phone: (04) 39449288 - 0904150383 - Fax: (04) 39449289
+				Reservation call (04) 39449288 - 0904150383 - Fax: (04) 39449289
 			</p>
 		</div>
 	</div>
