--- a/restaurant/index.html
+++ b/restaurant/index.html
@@ -12,8 +12,8 @@
 	<div class="wrapper">
 		<div class="main_menu">
 			<ul>
-			<li><a href="/restaurant/index.html">Home</a></li>
-			<li><a href="/restaurant/about.html">About</a></li>
+				<li><a href="/restaurant/index.html">Home</a></li>
+				<li><a href="/restaurant/about.html">About</a></li>
 				<li><a href="">Menu</a>
 					<ul>
 						<li><a href="/restaurant/items/starter.html">Starter</a></li>
@@ -89,11 +89,11 @@
 			</div>
 		</div>
 		<div id="footer">
-		<p>
-			Au Delice &amp; Le Restaurant d'Arthur - 2B Đường Ngô Thì Nhậm, Hà Nội - Việt Nam</br></br>
+			<p>
+				Au Delice & Le Restaurant d'Arthur - 2B Ngo Thi Nham st., Hanoi - Vietnam</br></br>
 
-			Phone: (04) 39449288 - 0904150383 - Fax: (04) 39449289
-		</p>
-	</div>
-</body>
-</html>
+				Reservation call (04) 39449288 - 0904150383 - Fax: (04) 39449289
+			</p>
+		</div>
+	</body>
+	</html>
